// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`card orchestrator MCP roundtrip > preserves assignee handoff 1`] = `
"{
  "content": [
    {
      "type": "text",
      "text": "{\\n  \\"card\\": {\\n    \\"id\\": \\"card-1\\",\\n    \\"number\\": 1,\\n    \\"version\\": 2,\\n    \\"status\\": \\"todo\\"\\n  }\\n}"
    }
  ],
  "structuredContent": {
    "card": {
      "id": "card-1",
      "number": 1,
      "version": 2,
      "status": "todo"
    }
  }
}"
`;

exports[`card orchestrator MCP roundtrip > preserves brief success 1`] = `
"{
  "content": [
    {
      "type": "text",
      "text": "{\\n  \\"card\\": {\\n    \\"id\\": \\"card-1\\",\\n    \\"number\\": 1,\\n    \\"version\\": 2,\\n    \\"status\\": \\"todo\\"\\n  }\\n}"
    }
  ],
  "structuredContent": {
    "card": {
      "id": "card-1",
      "number": 1,
      "version": 2,
      "status": "todo"
    }
  }
}"
`;

exports[`card orchestrator MCP roundtrip > preserves comment default spoken 1`] = `
"{
  "content": [
    {
      "type": "text",
      "text": "{\\n  \\"id\\": \\"<random-id>\\",\\n  \\"kind\\": \\"spoken\\",\\n  \\"authorKind\\": \\"user\\",\\n  \\"createdAt\\": \\"<time>\\"\\n}"
    }
  ],
  "structuredContent": {
    "id": "<random-id>",
    "kind": "spoken",
    "authorKind": "user",
    "createdAt": "<time>"
  }
}"
`;

exports[`card orchestrator MCP roundtrip > preserves comment reply 1`] = `
"{
  "content": [
    {
      "type": "text",
      "text": "{\\n  \\"id\\": \\"<random-id>\\",\\n  \\"kind\\": \\"comment\\",\\n  \\"authorKind\\": \\"agent\\",\\n  \\"createdAt\\": \\"<time>\\"\\n}"
    }
  ],
  "structuredContent": {
    "id": "<random-id>",
    "kind": "comment",
    "authorKind": "agent",
    "createdAt": "<time>"
  }
}"
`;

exports[`card orchestrator MCP roundtrip > preserves create duplicate assignee 1`] = `
"{
  "content": [
    {
      "type": "text",
      "text": "이미 카드 card-1의 담당입니다. A/S는 그 카드에 커멘트로, 새 업무는 assignee를 생략한 create_card로 새 카드를 만듭니다(바로 시작은 run=true, 대기는 queue=true)."
    }
  ],
  "structuredContent": {
    "error": "이미 카드 card-1의 담당입니다. A/S는 그 카드에 커멘트로, 새 업무는 assignee를 생략한 create_card로 새 카드를 만듭니다(바로 시작은 run=true, 대기는 queue=true).",
    "code": "INVALID_CARD_REQUEST"
  },
  "isError": true
}"
`;

exports[`card orchestrator MCP roundtrip > preserves create success 1`] = `
"{
  "content": [
    {
      "type": "text",
      "text": "{\\n  \\"card\\": {\\n    \\"id\\": \\"<random-id>\\",\\n    \\"number\\": 3,\\n    \\"version\\": 1,\\n    \\"status\\": \\"queued\\"\\n  }\\n}"
    }
  ],
  "structuredContent": {
    "card": {
      "id": "<random-id>",
      "number": 3,
      "version": 1,
      "status": "queued"
    }
  }
}"
`;

exports[`card orchestrator MCP roundtrip > preserves get missing 1`] = `
"{
  "content": [
    {
      "type": "text",
      "text": "Card not found"
    }
  ],
  "structuredContent": {
    "error": "Card not found",
    "code": "CARD_NOT_FOUND"
  },
  "isError": true
}"
`;

exports[`card orchestrator MCP roundtrip > preserves get success 1`] = `
"{
  "content": [
    {
      "type": "text",
      "text": "{\\n  \\"card\\": {\\n    \\"id\\": \\"card-1\\",\\n    \\"number\\": 1,\\n    \\"folderId\\": \\"cards-a\\",\\n    \\"title\\": \\"기존 카드\\",\\n    \\"status\\": \\"todo\\",\\n    \\"archived\\": false,\\n    \\"version\\": 1,\\n    \\"assigneeKind\\": \\"session\\",\\n    \\"assigneeAgentId\\": null,\\n    \\"assigneeSessionId\\": \\"header-session\\",\\n    \\"assigneeUserId\\": null,\\n    \\"now\\": null,\\n    \\"items\\": [],\\n    \\"blockedKind\\": null,\\n    \\"blockedDetail\\": null\\n  },\\n  \\"available\\": {\\n    \\"request\\": true,\\n    \\"brief\\": false,\\n    \\"attachments\\": false,\\n    \\"comments\\": 1,\\n    \\"notes\\": 0,\\n    \\"reports\\": 1,\\n    \\"sessions\\": 1,\\n    \\"now_history\\": 0\\n  },\\n  \\"changeToken\\": \\"<random-id>\\",\\n  \\"questions\\": {\\n    \\"items\\": [\\n      {\\n        \\"id\\": \\"seed-question\\",\\n        \\"cardId\\": \\"card-1\\",\\n        \\"sessionId\\": \\"header-session\\",\\n        \\"text\\": \\"기존 질문\\",\\n        \\"options\\": null,\\n        \\"askedAt\\": \\"<time>\\",\\n        \\"answer\\": null,\\n        \\"answeredAt\\": null,\\n        \\"answeredBy\\": null\\n      }\\n    ],\\n    \\"nextCursor\\": null,\\n    \\"truncated\\": false\\n  }\\n}"
    }
  ],
  "structuredContent": {
    "card": {
      "id": "card-1",
      "number": 1,
      "folderId": "cards-a",
      "title": "기존 카드",
      "status": "todo",
      "archived": false,
      "version": 1,
      "assigneeKind": "session",
      "assigneeAgentId": null,
      "assigneeSessionId": "header-session",
      "assigneeUserId": null,
      "now": null,
      "items": [],
      "blockedKind": null,
      "blockedDetail": null
    },
    "available": {
      "request": true,
      "brief": false,
      "attachments": false,
      "comments": 1,
      "notes": 0,
      "reports": 1,
      "sessions": 1,
      "now_history": 0
    },
    "changeToken": "<random-id>",
    "questions": {
      "items": [
        {
          "id": "seed-question",
          "cardId": "card-1",
          "sessionId": "header-session",
          "text": "기존 질문",
          "options": null,
          "askedAt": "<time>",
          "answer": null,
          "answeredAt": null,
          "answeredBy": null
        }
      ],
      "nextCursor": null,
      "truncated": false
    }
  }
}"
`;

exports[`card orchestrator MCP roundtrip > preserves internal no session 1`] = `
"{
  "content": [
    {
      "type": "text",
      "text": "caller session id is required for card mutation. Send x-soulstream-agent-session-id."
    }
  ],
  "structuredContent": {
    "error": "caller session id is required for card mutation. Send x-soulstream-agent-session-id."
  },
  "isError": true
}"
`;

exports[`card orchestrator MCP roundtrip > preserves list all 1`] = `
"{
  "content": [
    {
      "type": "text",
      "text": "{\\n  \\"cards\\": [\\n    {\\n      \\"id\\": \\"card-1\\",\\n      \\"number\\": 1,\\n      \\"title\\": \\"기존 카드\\",\\n      \\"status\\": \\"todo\\",\\n      \\"assigneeKind\\": \\"session\\",\\n      \\"assigneeAgentId\\": null,\\n      \\"assigneeSessionId\\": \\"header-session\\",\\n      \\"assigneeUserId\\": null,\\n      \\"updatedAt\\": \\"<time>\\"\\n    },\\n    {\\n      \\"id\\": \\"card-done\\",\\n      \\"number\\": 2,\\n      \\"title\\": \\"완료 카드\\",\\n      \\"status\\": \\"done\\",\\n      \\"assigneeKind\\": \\"session\\",\\n      \\"assigneeAgentId\\": null,\\n      \\"assigneeSessionId\\": \\"argument-session\\",\\n      \\"assigneeUserId\\": null,\\n      \\"updatedAt\\": \\"<time>\\"\\n    }\\n  ],\\n  \\"nextCursor\\": null,\\n  \\"truncated\\": false\\n}"
    }
  ],
  "structuredContent": {
    "cards": [
      {
        "id": "card-1",
        "number": 1,
        "title": "기존 카드",
        "status": "todo",
        "assigneeKind": "session",
        "assigneeAgentId": null,
        "assigneeSessionId": "header-session",
        "assigneeUserId": null,
        "updatedAt": "<time>"
      },
      {
        "id": "card-done",
        "number": 2,
        "title": "완료 카드",
        "status": "done",
        "assigneeKind": "session",
        "assigneeAgentId": null,
        "assigneeSessionId": "argument-session",
        "assigneeUserId": null,
        "updatedAt": "<time>"
      }
    ],
    "nextCursor": null,
    "truncated": false
  }
}"
`;

exports[`card orchestrator MCP roundtrip > preserves list done 1`] = `
"{
  "content": [
    {
      "type": "text",
      "text": "{\\n  \\"cards\\": [\\n    {\\n      \\"id\\": \\"card-done\\",\\n      \\"number\\": 2,\\n      \\"title\\": \\"완료 카드\\",\\n      \\"status\\": \\"done\\",\\n      \\"assigneeKind\\": \\"session\\",\\n      \\"assigneeAgentId\\": null,\\n      \\"assigneeSessionId\\": \\"argument-session\\",\\n      \\"assigneeUserId\\": null,\\n      \\"updatedAt\\": \\"<time>\\"\\n    }\\n  ],\\n  \\"nextCursor\\": null,\\n  \\"truncated\\": false\\n}"
    }
  ],
  "structuredContent": {
    "cards": [
      {
        "id": "card-done",
        "number": 2,
        "title": "완료 카드",
        "status": "done",
        "assigneeKind": "session",
        "assigneeAgentId": null,
        "assigneeSessionId": "argument-session",
        "assigneeUserId": null,
        "updatedAt": "<time>"
      }
    ],
    "nextCursor": null,
    "truncated": false
  }
}"
`;

exports[`card orchestrator MCP roundtrip > preserves list folder 1`] = `
"{
  "content": [
    {
      "type": "text",
      "text": "{\\n  \\"cards\\": [\\n    {\\n      \\"id\\": \\"card-1\\",\\n      \\"number\\": 1,\\n      \\"title\\": \\"기존 카드\\",\\n      \\"status\\": \\"todo\\",\\n      \\"assigneeKind\\": \\"session\\",\\n      \\"assigneeAgentId\\": null,\\n      \\"assigneeSessionId\\": \\"header-session\\",\\n      \\"assigneeUserId\\": null,\\n      \\"updatedAt\\": \\"<time>\\"\\n    },\\n    {\\n      \\"id\\": \\"card-done\\",\\n      \\"number\\": 2,\\n      \\"title\\": \\"완료 카드\\",\\n      \\"status\\": \\"done\\",\\n      \\"assigneeKind\\": \\"session\\",\\n      \\"assigneeAgentId\\": null,\\n      \\"assigneeSessionId\\": \\"argument-session\\",\\n      \\"assigneeUserId\\": null,\\n      \\"updatedAt\\": \\"<time>\\"\\n    }\\n  ],\\n  \\"nextCursor\\": null,\\n  \\"truncated\\": false\\n}"
    }
  ],
  "structuredContent": {
    "cards": [
      {
        "id": "card-1",
        "number": 1,
        "title": "기존 카드",
        "status": "todo",
        "assigneeKind": "session",
        "assigneeAgentId": null,
        "assigneeSessionId": "header-session",
        "assigneeUserId": null,
        "updatedAt": "<time>"
      },
      {
        "id": "card-done",
        "number": 2,
        "title": "완료 카드",
        "status": "done",
        "assigneeKind": "session",
        "assigneeAgentId": null,
        "assigneeSessionId": "argument-session",
        "assigneeUserId": null,
        "updatedAt": "<time>"
      }
    ],
    "nextCursor": null,
    "truncated": false
  }
}"
`;

exports[`card orchestrator MCP roundtrip > preserves list status 1`] = `
"{
  "content": [
    {
      "type": "text",
      "text": "{\\n  \\"cards\\": [\\n    {\\n      \\"id\\": \\"card-1\\",\\n      \\"number\\": 1,\\n      \\"title\\": \\"기존 카드\\",\\n      \\"status\\": \\"todo\\",\\n      \\"assigneeKind\\": \\"session\\",\\n      \\"assigneeAgentId\\": null,\\n      \\"assigneeSessionId\\": \\"header-session\\",\\n      \\"assigneeUserId\\": null,\\n      \\"updatedAt\\": \\"<time>\\"\\n    }\\n  ],\\n  \\"nextCursor\\": null,\\n  \\"truncated\\": false\\n}"
    }
  ],
  "structuredContent": {
    "cards": [
      {
        "id": "card-1",
        "number": 1,
        "title": "기존 카드",
        "status": "todo",
        "assigneeKind": "session",
        "assigneeAgentId": null,
        "assigneeSessionId": "header-session",
        "assigneeUserId": null,
        "updatedAt": "<time>"
      }
    ],
    "nextCursor": null,
    "truncated": false
  }
}"
`;

exports[`card orchestrator MCP roundtrip > preserves move success 1`] = `
"{
  "content": [
    {
      "type": "text",
      "text": "{\\n  \\"card\\": {\\n    \\"id\\": \\"card-1\\",\\n    \\"number\\": 1,\\n    \\"version\\": 2,\\n    \\"status\\": \\"todo\\"\\n  },\\n  \\"folderId\\": \\"cards-b\\"\\n}"
    }
  ],
  "structuredContent": {
    "card": {
      "id": "card-1",
      "number": 1,
      "version": 2,
      "status": "todo"
    },
    "folderId": "cards-b"
  }
}"
`;

exports[`card orchestrator MCP roundtrip > preserves mutation missing 1`] = `
"{
  "content": [
    {
      "type": "text",
      "text": "{\\"detail\\":{\\"error\\":{\\"code\\":\\"CARD_NOT_FOUND\\"}}}"
    }
  ],
  "structuredContent": {
    "error": "{\\"detail\\":{\\"error\\":{\\"code\\":\\"CARD_NOT_FOUND\\"}}}",
    "code": "CARD_NOT_FOUND"
  },
  "isError": true
}"
`;

exports[`card orchestrator MCP roundtrip > preserves question no options 1`] = `
"{
  "content": [
    {
      "type": "text",
      "text": "{\\n  \\"card\\": {\\n    \\"id\\": \\"card-1\\",\\n    \\"number\\": 1,\\n    \\"version\\": 2,\\n    \\"status\\": \\"blocked\\"\\n  },\\n  \\"guidance\\": \\"질문이 등록되었다. 이 턴을 끝내고 답을 기다린다.\\"\\n}"
    }
  ],
  "structuredContent": {
    "card": {
      "id": "card-1",
      "number": 1,
      "version": 2,
      "status": "blocked"
    },
    "guidance": "질문이 등록되었다. 이 턴을 끝내고 답을 기다린다."
  }
}"
`;

exports[`card orchestrator MCP roundtrip > preserves question options 1`] = `
"{
  "content": [
    {
      "type": "text",
      "text": "{\\n  \\"card\\": {\\n    \\"id\\": \\"card-1\\",\\n    \\"number\\": 1,\\n    \\"version\\": 2,\\n    \\"status\\": \\"blocked\\"\\n  },\\n  \\"guidance\\": \\"질문이 등록되었다. 이 턴을 끝내고 답을 기다린다.\\"\\n}"
    }
  ],
  "structuredContent": {
    "card": {
      "id": "card-1",
      "number": 1,
      "version": 2,
      "status": "blocked"
    },
    "guidance": "질문이 등록되었다. 이 턴을 끝내고 답을 기다린다."
  }
}"
`;

exports[`card orchestrator MCP roundtrip > preserves reply mismatch 1`] = `
"{
  "content": [
    {
      "type": "text",
      "text": "caller_session_id must match the authenticated request session header"
    }
  ],
  "structuredContent": {
    "error": "caller_session_id must match the authenticated request session header"
  },
  "isError": true
}"
`;

exports[`card orchestrator MCP roundtrip > preserves report success 1`] = `
"{
  "content": [
    {
      "type": "text",
      "text": "{\\n  \\"card\\": {\\n    \\"id\\": \\"card-1\\",\\n    \\"number\\": 1,\\n    \\"version\\": 1,\\n    \\"status\\": \\"todo\\"\\n  }\\n}"
    }
  ],
  "structuredContent": {
    "card": {
      "id": "card-1",
      "number": 1,
      "version": 1,
      "status": "todo"
    }
  }
}"
`;

exports[`card orchestrator MCP roundtrip > preserves review success 1`] = `
"{
  "content": [
    {
      "type": "text",
      "text": "{\\n  \\"card\\": {\\n    \\"id\\": \\"card-1\\",\\n    \\"number\\": 1,\\n    \\"version\\": 2,\\n    \\"status\\": \\"review\\"\\n  }\\n}"
    }
  ],
  "structuredContent": {
    "card": {
      "id": "card-1",
      "number": 1,
      "version": 2,
      "status": "review"
    }
  }
}"
`;

exports[`card orchestrator MCP roundtrip > preserves status mismatch 1`] = `
"{
  "content": [
    {
      "type": "text",
      "text": "caller_session_id must match the authenticated request session header"
    }
  ],
  "structuredContent": {
    "error": "caller_session_id must match the authenticated request session header"
  },
  "isError": true
}"
`;

exports[`card orchestrator MCP roundtrip > preserves status success 1`] = `
"{
  "content": [
    {
      "type": "text",
      "text": "{\\n  \\"card\\": {\\n    \\"id\\": \\"card-1\\",\\n    \\"number\\": 1,\\n    \\"version\\": 2,\\n    \\"status\\": \\"running\\"\\n  }\\n}"
    }
  ],
  "structuredContent": {
    "card": {
      "id": "card-1",
      "number": 1,
      "version": 2,
      "status": "running"
    }
  }
}"
`;

exports[`card orchestrator MCP roundtrip > preserves system create 1`] = `
"{
  "content": [
    {
      "type": "text",
      "text": "System folders cannot own cards"
    }
  ],
  "structuredContent": {
    "error": "System folders cannot own cards",
    "code": "FOLDER_OPERATION_FAILED"
  },
  "isError": true
}"
`;

exports[`card orchestrator MCP roundtrip > preserves system move 1`] = `
"{
  "content": [
    {
      "type": "text",
      "text": "System folders cannot own cards"
    }
  ],
  "structuredContent": {
    "error": "System folders cannot own cards",
    "code": "FOLDER_OPERATION_FAILED"
  },
  "isError": true
}"
`;

exports[`card orchestrator MCP roundtrip > preserves version conflict 1`] = `
"{
  "content": [
    {
      "type": "text",
      "text": "folder card version conflict: card-1 expected version 999, actual version 1"
    }
  ],
  "structuredContent": {
    "error": "folder card version conflict: card-1 expected version 999, actual version 1",
    "code": "CARD_VERSION_CONFLICT"
  },
  "isError": true
}"
`;

exports[`card orchestrator MCP roundtrip > preserves work mismatch 1`] = `
"{
  "content": [
    {
      "type": "text",
      "text": "caller_session_id must match the authenticated request session header"
    }
  ],
  "structuredContent": {
    "error": "caller_session_id must match the authenticated request session header"
  },
  "isError": true
}"
`;

exports[`card orchestrator MCP roundtrip > preserves work no execution 1`] = `
"{
  "content": [
    {
      "type": "text",
      "text": "Current work execution required; orchestration purpose cannot start work"
    }
  ],
  "structuredContent": {
    "error": "Current work execution required; orchestration purpose cannot start work"
  },
  "isError": true
}"
`;

exports[`card orchestrator MCP roundtrip > preserves work success 1`] = `
"{
  "content": [
    {
      "type": "text",
      "text": "{\\n  \\"card\\": {\\n    \\"id\\": \\"card-1\\",\\n    \\"number\\": 1,\\n    \\"version\\": 2,\\n    \\"status\\": \\"running\\"\\n  }\\n}"
    }
  ],
  "structuredContent": {
    "card": {
      "id": "card-1",
      "number": 1,
      "version": 2,
      "status": "running"
    }
  }
}"
`;
